ht_sfNewsCenter/src/objects/Google_Alert_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Email_Services_Address__c</fullName>
        <label>Email Services Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Max_Stories_Per_Alert__c</fullName>
        <label>Max Stories Per Alert</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Source_Blacklist__c</fullName>
        <label>News Source Blacklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>News Center Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GAS-{00}</displayFormat>
        <label>Google Alert Settings Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Center Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>